Fixed modal close btn not aligned on Safari

--- a/src/assets/styles/Modal.scss
+++ b/src/assets/styles/Modal.scss
@@ -12,6 +12,8 @@
     font-size: 40px;
     display: flex;
     margin: 30px auto;
-    cursor: pointer
+    cursor: pointer;
+    width: 100%;
+    box-sizing: border-box;
   }
 }
